--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,7 @@
 version : "3.3"
 services :
-   web :
+   webapp :
      build: 
-      context: .
-     #image: "nodes-app:latest"
+     image: "nodes-app:latest"
      ports :
          - "8000:8000"
