--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 version : "3.3"
 services :
-   webapp :
-     build: 
-     image: "nodes-app:latest"
+   web :
+     build:
+       context: .
+     #image: "nodes-app:latest"
      ports :
          - "8000:8000"
