--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version : "3.3"
 services :
    web :
-     build:
+     # build:
        # context: .
      image: "rabi4450/nodes-app:latest"
      ports :
