--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -23,11 +23,15 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-service
+  name: nginx
+  labels:
+    app: go-web-app
 spec:
+  ports:
+  - port: 80
+    targetPort: 8000
+    protocol: TCP
   selector:
     app: nginx
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 8000
+  type: NodePort
+
