--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -1,37 +1,37 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
+  name: nodes-todo-deployment
   labels:
-    app: nginx
+    app: nodes-todo
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: nginx
+      app: nodes-todo
   template:
     metadata:
       labels:
-        app: nginx
+        app: nodes-todo
     spec:
       containers:
-      - name: nginx
+      - name: nodes-todo
         image: rabi4450/nodes-app:latest
         ports:
-        - containerPort: 8000
+        - containerPort: 8080
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx
+  name: nodes-todo
   labels:
-    app: nginx
+    app: nodes-todo
 spec:
   ports:
   - port: 80
     targetPort: 8000
     protocol: TCP
   selector:
-    app: nginx
+    app: nodes-todo
   type: NodePort
 
